# config

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  README_CN.md  TODO.md  llms.txt  run_coverage.ps1
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benchmark/: CMakeLists.txt  benchmark.cpp
cmake/: configConfig.cmake.in
docs/: API_Reference.md  API_Reference_CN.md  Build_and_Install.md  Build_and_Install_CN.md  Examples.md  Examples_CN.md  README_CN.md
examples/: 01_basic_usage.cpp  02_save_strategies.cpp  03_get_strategies.cpp  04_obfuscation.cpp  05_path_strategies.cpp  06_listeners.cpp  07_global_functions.cpp  08_concurrent_access.cpp  09_struct_serialization.cpp  CMakeLists.txt
examples/basic_get_set/: CMakeLists.txt  main.cpp
examples/change_listeners/: CMakeLists.txt  main.cpp
examples/error_and_validation/: CMakeLists.txt  main.cpp
examples/example1/: CMakeLists.txt  main.cpp
examples/example2/: CMakeLists.txt  main.cpp
examples/example3/: CMakeLists.txt  main.cpp
examples/example4/: CMakeLists.txt  main.cpp
examples/example5/: CMakeLists.txt  main.cpp
examples/file_io_reload/: CMakeLists.txt  main.cpp
examples/json_pointer_crud/: CMakeLists.txt  main.cpp
examples/multiple_stores_registry/: CMakeLists.txt  main.cpp
examples/obfuscation_policies/: CMakeLists.txt  main.cpp
examples/path_policies_env/: CMakeLists.txt  main.cpp
examples/save_formats/: CMakeLists.txt  main.cpp
examples/save_policies/: CMakeLists.txt  main.cpp
include/config/: config.h  config.hpp  store.hpp  version.h.in
include/config/detail/: obfuscation.hpp  path_resolver.hpp  types.hpp
tests/: CMakeLists.txt  test_advanced.cpp  test_basic.cpp  test_combined.cpp  test_core.cpp  test_coverage_optimization.cpp  test_fallback.cpp  test_fallback_progname.cpp  test_get_strategy.cpp  test_global_api.cpp  test_listener.cpp  test_listener_exception.cpp  test_obfuscation.cpp  test_path.cpp  test_persistence.cpp  test_save_strategy.cpp  test_thread_safety.cpp
